--- a/Man_Radu_Lab2/Pages/Books/Edit.cshtml
+++ b/Man_Radu_Lab2/Pages/Books/Edit.cshtml
@@ -21,7 +21,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Book.AuthorID" class="control-label">Author Name</label>
-                <select asp-for="Book.AuthorID" class="form-control" asp-items="ViewBag.AuthorID">
+                <select asp-for="Book.AuthorID" class="form-control" asp-items="ViewBag.LastName">
                 </select>
                 <span asp-validation-for="Book.AuthorID" class="text-danger"></span>
             </div>
@@ -41,11 +41,34 @@
                 </select>
                 <span asp-validation-for="Book.PublisherID" class="text-danger"></span>
             </div>
-            <br>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
+                <div class="table">
+                    <table>
+                        <br>
+                        <div class="form-group">
+                            <input type="submit" value="Save" class="btn btn-primary" />
+                        </div>
+                        <tr>
+                            @{
+                                int cnt = 0;
+                                foreach (var cat in Model.AssignedCategoryDataList)
+                                {
+                                    if (cnt++ % 3 == 0)
+                                    {
+                                    @:</tr><tr>
+                                    }
+                                    @:<td>
+                                          <input type="checkbox" name="selectedCategories" value="@cat.CategoryID"
+                                                 @(Html.Raw(cat.Assigned ? "checked=\"checked=\"" : "")) />
+                                        @cat.CategoryID @: @cat.Name
+                                    @:</td>
+                                }
+                            @:</tr>
+                            }
+                        </table>
+                    </div>
+                </div>
+            </form>
     </div>
 </div>
 
