--- a/Man_Radu_Lab2/Pages/Categories/Index.cshtml
+++ b/Man_Radu_Lab2/Pages/Categories/Index.cshtml
@@ -1,4 +1,4 @@
-@page
+@page "{id:int?}"
 @model Man_Radu_Lab2.Pages.Categories.IndexModel
 
 @{
@@ -20,17 +20,41 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model.Category) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.CategoryName)
-            </td>
-            <td>
-                <a asp-page="./Edit" asp-route-id="@item.ID">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.ID">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.ID">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
+            @foreach (var item in Model.CategoryData.Categories)
+                {
+                    string selectedRow = "";
+                    if (item.ID == Model.CategoryID)
+                    {
+                        selectedRow = "table-success";
+                    }
+                <tr class="@selectedRow">
+                    <td>
+                        @Html.DisplayFor(modelItem => item.CategoryName)
+                    </td>
+                    <td>
+                        <a asp-page="./Index" asp-route-id="@item.ID">Select</a>
+                        <a asp-page="./Edit" asp-route-id="@item.ID">Edit</a> |
+                        <a asp-page="./Details" asp-route-id="@item.ID">Details</a> |
+                        <a asp-page="./Delete" asp-route-id="@item.ID">Delete</a>
+                    </td>
+                </tr>
+                }
+        </tbody>
 </table>
+
+@if (Model.CategoryData.BookCategories != null)
+{
+    <h3>Books and Author name with selected Category</h3>
+    <table class="table">
+
+        @foreach (var item in Model.CategoryData.BookCategories)
+        {
+            <tr>
+                <td>
+                    @item.Book.Title : @item.Book.Author.FullName
+                    <br />
+                </td>
+            </tr>
+        }
+    </table>
+}
